--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Test</title>
 </head>
 <body>
-    <h1>This is the home page<h1>
+    <h1>This is the home page</h1>
     <p>This site will be used to test hosting websites with gitpages</p>
     <ul>
             <li><a>About Me</a></li>
