added new pages

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>This is the home page</h1>
     <p>This site will be used to test hosting websites with gitpages</p>
     <ul>
-            <li><a>About Me</a></li>
-            <li><a>All My Financial Information</a></li>
-            <li><a>Now For Something Completely Different</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="finances.html">All My Financial Information</a></li>
+            <li><a href="something-different.html">Now For Something Completely Different</a></li>
     </ul>
 </body>
 </html>
