--- a/about.html
+++ b/about.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="UTF-8" />
-<title>About Me</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+
+
+    <title>Will Ernst</title>
+
+    <!-- Bootstrap Core CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link href="full.css" rel="stylesheet">
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>I am a student at Middlebury College, where I study Computer Science and Economics.</p>
+
+<div class="nb"></div>
+<!-- Header -->
+<header class="intro-header" style="background-image: url('sf.jpeg'); height:300px"></header>
+<hr>
+    <!-- Post Content -->
+    <article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h2>About me</h2>
+                    <p>I am a Computer Science and Economics double major at Middlebury College (Middlebury, VT). I love to build. It's what gets me out of bed in the mornings. I am particularly interested in engineering related to machine learning and data analysis.</p>
+
+                    <p>When I'm not coding working on problem sets, I am a member of the Middlebury Mens Lacrosse team. Additionally, I am a member of Middlebury's Computer Science Club ("Middle Endian") and the Student Investment Club. In my spare time, I am developing a website for off-campus housing and vacation rentals for the Middlebury College Community.</p>
+
+                    <p>I have programming experience in Python, Java, C, JavaScript, D3, HTML, CSS, and STATA. To see some selected projects, click <a href="projects.html">here</a>. To see my selected coursework, click <a href="coursework.html">here</a>.</p>
+
+                    <p>I'm originally from San Francisco and am an avid Bay Area sports fan. In my free time I obsess over surfing and skiing.</p>
+
+                </div>
+            </div>
+        </div>
+</article>
+<hr>
+<footer class="intro-header" style="background-image: url('sarfin.jpg'); height:75%; width:75%; margin-left: auto; margin-right: auto;"></footer>
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script>
+$(document).ready(function(){ $('.nb').load("nav.html"); });
+</script>
+
+
+<!-- Bootstrap Core JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
