--- a/contact.html
+++ b/contact.html
@@ -22,37 +22,9 @@
 <body>
 
 <div class="nb"></div>
-<!-- Header -->
-<a name="about"></a>
-<div class="intro-header">
-	<div class="container">
-
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="intro-message">
-					<h1>Will Ernst</h1>
-					<h3>My Homepage</h3>
-					<hr class="intro-divider">
-					<ul class="list-inline intro-social-buttons">
-						<li>
-							<a href="https://github.com/wernst" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-						</li>
-						<li>
-							<a href="https://www.linkedin.com/in/will-ernst-71557297" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-						</li>
-						<li>
-							<a href="Ernst_Resume_ws.pdf" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Resume</span></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-	</div>
-	<!-- /.container -->
-
+<div class="container">
+    <p>I can be contacted by email at wernst@middlebury.edu</p>
 </div>
-<!-- /.intro-header -->
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
