--- a/projects.html
+++ b/projects.html
@@ -20,46 +20,32 @@
     <link href="full.css" rel="stylesheet">
 </head>
 <body>
-
 <div class="nb"></div>
-<!-- Header -->
-<a name="about"></a>
-<div class="intro-header">
-	<div class="container">
 
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="intro-message">
-					<h1>Will Ernst</h1>
-					<h3>My Homepage</h3>
-					<hr class="intro-divider">
-					<ul class="list-inline intro-social-buttons">
-						<li>
-							<a href="https://github.com/wernst" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-						</li>
-						<li>
-							<a href="https://www.linkedin.com/in/will-ernst-71557297" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-						</li>
-						<li>
-							<a href="Ernst_Resume_ws.pdf" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Resume</span></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-	</div>
-	<!-- /.container -->
-
+<div class="container">
+    <h1>Selected Projects</h1><hr>
+    <h3>TD-Othello: Temporal Difference Learning in the Game of Othello</h3>
+    <p>An AI agent trained to play the boardgame Othello using a Neural Netowrk with Temporal Difference Learning</p>
+    <a href = "G_Will-FinalProject.pdf" >Paper</a><br>
+    <a href = "https://github.com/wernst/td-othello">Repo</a>
+    <h3>Middlebury College Housing Website</h3>
+    <a href = "http://middoffcampus.com">MOHO</a>
+    <h3>Sudoku Solver</h3>
+    <p>A sudoku solver using the AC-3 algorithm</p>
+    <a href = "https://github.com/wernst/sudoku_solver">Repo</a>
+    <h3>Handwritten Digit Recognizer</h3>
+    <p>An image parser to parse individual digits from an image and a Neural Network trained through supervised learning to recognize handwritten digits</p>
+    <p><a href = "https://github.com/wernst/CS311_Final_Project">Repo</a>, still some minor bug fixes needed</p>
+    <h3>Stock Market Portfolio Visualization in D3</h3>
+    <p>A portfolio visualization using D3 meant to track total portfolio valuation over time, using stock data pulled from Yahoo! Finance</p>
+    <p>Link coming soon</p>
 </div>
-<!-- /.intro-header -->
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script>
 $(document).ready(function(){ $('.nb').load("nav.html"); });
 </script>
-
 
 <!-- Bootstrap Core JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
