moho project description

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,8 @@
     <p>An AI agent trained to play the boardgame Othello using a Neural Netowrk with Temporal Difference Learning</p>
     <a href = "G_Will-FinalProject.pdf" >Paper</a><br>
     <a href = "https://github.com/wernst/td-othello">Repo</a>
-    <h3>Middlebury College Housing Website</h3>
+    <h3>MOHO: Middlebury College Housing Website</h3>
+    <p>A website for short-term and long-term rental housing listings for the Middlebury College Community. This includes student housing, faculty/staff housing, vacation rentals for parents and visitors, etc...</p>
     <a href = "http://middoffcampus.com">MOHO</a>
     <h3>Sudoku Solver</h3>
     <p>A sudoku solver using the AC-3 algorithm</p>
