styling and wording

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,9 @@
 
 <div class="nb"></div>
 <div class="container">
-    <p>I can be contacted by email at wernst@middlebury.edu</p>
+    <div class="row">
+        <p>I can be contacted by email at wernst@middlebury.edu</p>
+    </div>
 </div>
 
 <!-- jQuery -->
