--- a/projects.html
+++ b/projects.html
@@ -23,23 +23,36 @@
 <div class="nb"></div>
 
 <div class="container">
-    <h1>Selected Projects</h1><hr>
-    <h3>TD-Othello: Temporal Difference Learning in the Game of Othello</h3>
-    <p>An AI agent trained to play the boardgame Othello using a Neural Netowrk with Temporal Difference Learning</p>
-    <a href = "G_Will-FinalProject.pdf" >Paper</a><br>
-    <a href = "https://github.com/wernst/td-othello">Repo</a>
-    <h3>MOHO: Middlebury College Housing Website</h3>
-    <p>A website for short-term and long-term rental housing listings for the Middlebury College Community. This includes student housing, faculty/staff housing, vacation rentals for parents and visitors, etc...</p>
-    <a href = "http://middoffcampus.com">MOHO</a>
-    <h3>Sudoku Solver</h3>
-    <p>A sudoku solver using the AC-3 algorithm</p>
-    <a href = "https://github.com/wernst/sudoku_solver">Repo</a>
-    <h3>Handwritten Digit Recognizer</h3>
-    <p>An image parser to parse individual digits from an image and a Neural Network trained through supervised learning to recognize handwritten digits</p>
-    <p><a href = "https://github.com/wernst/CS311_Final_Project">Repo</a>, still some minor bug fixes needed</p>
-    <h3>Stock Market Portfolio Visualization in D3</h3>
-    <p>A portfolio visualization using D3 meant to track total portfolio valuation over time, using stock data pulled from Yahoo! Finance</p>
-    <p>Link coming soon</p>
+    <div class="row">
+        <h1>Selected Projects</h1><hr>
+    </div>
+    <div class="row">
+
+        <h3>TD-Othello: Temporal Difference Learning in the Game of Othello</h3>
+        <p>An AI agent trained to play the boardgame Othello using a Neural Netowrk with Temporal Difference Learning</p>
+        <a href = "G_Will-FinalProject.pdf" >Paper</a><br>
+        <a href = "https://github.com/wernst/td-othello">Repo</a>
+    </div>
+    <div class="row">
+        <h3>MOHO: Middlebury College Housing Website</h3>
+        <p>A website for short-term and long-term rental housing listings for the Middlebury College Community. This includes student housing, faculty/staff housing, vacation rentals for parents and visitors, etc...</p>
+        <a href = "http://middoffcampus.com">MOHO</a>
+    </div>
+    <div class="row">
+        <h3>Sudoku Solver</h3>
+        <p>A sudoku solver using the AC-3 algorithm</p>
+        <a href = "https://github.com/wernst/sudoku_solver">Repo</a>
+    </div>
+    <div class="row">
+        <h3>Handwritten Digit Recognizer</h3>
+        <p>An image parser to parse individual digits from an image and a Neural Network trained through supervised learning to recognize handwritten digits</p>
+        <p><a href = "https://github.com/wernst/CS311_Final_Project">Repo</a>, still some minor bug fixes needed</p>
+    </div>
+    <div class="row">
+        <h3>Stock Market Portfolio Visualization in D3</h3>
+        <p>A portfolio visualization using D3 meant to track total portfolio valuation over time, using stock data pulled from Yahoo! Finance</p>
+        <p>Link coming soon</p>
+    </div>
 </div>
 
 <!-- jQuery -->
