--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <h2>About me</h2>
-                    <p>I am a Computer Science and Economics double major at Middlebury College (Middlebury, VT). I love to build. It's what gets me out of bed in the mornings. I am particularly interested in engineering related to machine learning and data analysis.</p>
+                    <p>I am a Computer Science and Economics double major at Middlebury College (Middlebury, VT). Building is my passion. It's what gets me out of bed in the mornings, It’s what gets me out of bed in the mornings, whether I’m designing systems and websites for my Computer Science classes or building econometric and statistical models in my Economics coursework. I am particularly interested in engineering related to machine learning and data analysis.</p>
 
-                    <p>When I'm not coding working on problem sets, I am a member of the Middlebury Mens Lacrosse team. Additionally, I am a member of Middlebury's Computer Science Club ("Middle Endian") and the Student Investment Club. In my spare time, I am developing a website for off-campus housing and vacation rentals for the Middlebury College Community.</p>
+                    <p>When I'm not coding working on problem sets, I am a member of the Middlebury Mens Lacrosse team and was voted as the Captain for the 2017 season. Additionally, I am a member of Middlebury's Computer Science Club ("Middle Endian") and the Student Investment Club. In my spare time, I am developing a website for long-term and vacation rentals for the Middlebury College Community (students, parents, faculty/staff, alumni, etc...).</p>
 
-                    <p>I have programming experience in Python, Java, C, JavaScript, D3, HTML, CSS, and STATA. To see some selected projects, click <a href="projects.html">here</a>. To see my selected coursework, click <a href="coursework.html">here</a>.</p>
+                    <p>I have programming experience in Python, R, Java, C, JavaScript (AngularJS, Node.js, D3), HTML, CSS, and STATA. To see some selected projects, click <a href="projects.html">here</a>. To see my selected coursework, click <a href="coursework.html">here</a>.</p>
 
                     <p>I'm originally from San Francisco and am an avid Bay Area sports fan. In my free time I obsess over surfing and skiing.</p>
 
