--- a/coursework.html
+++ b/coursework.html
@@ -49,6 +49,7 @@ margin: 15px;
                 <li>Applied Econometrics</li>
 				<li>Regression Analysis</li>
                 <li>Game Theory</li>
+                <li>Monetary Theory and Financial Institutions</li>
 				<li>Economic Statistics</li>
 				<li>Macroeconomic Theory</li>
 				<li>Microeconomic Theory</li>
