--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <h2>About me</h2>
                     <p>I am a Computer Science and Economics double major at Middlebury College (Middlebury, VT). Building is my passion. It’s what gets me out of bed in the mornings, whether I’m designing systems and websites for my Computer Science classes or building econometric and statistical models in my Economics coursework. I am particularly interested in engineering related to machine learning and data analysis.</p>
 
-                    <p>When I'm not coding working on problem sets, I am a member of the Middlebury Mens Lacrosse team and was voted as the Captain for the 2017 season. Additionally, I am a member of Middlebury's Computer Science Club ("Middle Endian") and the Student Investment Club. In my spare time, I am developing a website for long-term and vacation rentals for the Middlebury College Community (students, parents, faculty/staff, alumni, etc...).</p>
+                    <p>When I'm not coding working on problem sets, I am a member of the Middlebury Mens Lacrosse team and was voted as the Captain for the 2017 season. Additionally, I am a member of Middlebury's Computer Science Club ("Middle Endian") and the Student Investment Club. In my spare time, I am developing a website for long-term and vacation rentals for the Middlebury College Community (students, parents, faculty/staff, alumni, etc...) - <a href="https://www.middoffcampus.com">www.middoffcampus.com</a>.</p>
 
                     <p>I have programming experience in Python, R, Java, C, JavaScript (AngularJS, Node.js, D3), HTML, CSS, and STATA. To see some selected projects, click <a href="projects.html">here</a>. To see my selected coursework, click <a href="coursework.html">here</a>.</p>
 
