--- a/about.html
+++ b/about.html
@@ -1,70 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<p>Hello World!</p>
+<p>My name is Will Ernst. I'm a software developer. I graduated from Middlebury College in 2017. In my free time I enjoy surfing, skiing, reading (generally books/blogs on tech, programming, economics), and playing the guitar. </p>
+<p>Some Work:</p>
+<ul>
+    <li>COMING SOON: An application for finding charities and managing recurring donations</li>
+    <li>MOHO: A website for short-term and long-term rental housing listings for the Middlebury College Community. This includes student housing, faculty/staff housing, vacation rentals for parents and visitors, etc... | <a href = "http://middoffcampus.com">link</a></li>        
+    <li>TD-Othello: Temporal Difference Learning in the Game of Othello | <a href = "assets/G_Will-FinalProject.pdf" >Paper</a> | <a href = "https://github.com/wernst/td-othello">Repo</a></li>        
+    </div>
+</ul>
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-
-
-    <title>Will Ernst</title>
-
-    <!-- Bootstrap Core CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Custom CSS -->
-    <link href="full.css" rel="stylesheet">
-</head>
-<body>
-
-<div class="nb"></div>
-<!-- Header -->
-<header class="intro-header" style="background-image: url('sf.jpeg'); height:300px"></header>
-<hr>
-    <!-- Post Content -->
-    <article>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h2>About me</h2>
-                    <p>I am a Computer Science and Economics double major at Middlebury College (Middlebury, VT). Building is my passion. It’s what gets me out of bed in the mornings, whether I’m designing systems and websites for my Computer Science classes or building econometric and statistical models in my Economics coursework. I am particularly interested in engineering related to machine learning, financial engineering, and the blockchain/cryptocurrencies.</p>
-
-                    <p>When I'm not coding working on problem sets, I am a member of the Middlebury Mens Lacrosse team and was voted as the Captain for the 2017 season. Additionally, I am a member of Middlebury's Computer Science Club ("Middle Endian") and the Student Investment Club. In my spare time, I am developing a website for long-term and vacation rentals for the Middlebury College Community (students, parents, faculty/staff, alumni, etc...) - <a href="https://www.middoffcampus.com">www.middoffcampus.com</a>.</p>
-
-                    <p>I have programming experience in Python, R, Java, C, JavaScript (AngularJS, Node.js, D3), HTML, CSS, and STATA. To see some selected projects, click <a href="projects.html">here</a>. To see my selected coursework, click <a href="coursework.html">here</a>.</p>
-
-                    <p>I'm originally from San Francisco and am an avid Bay Area sports fan. In my free time I obsess over surfing and skiing.</p>
-
-                </div>
-            </div>
-        </div>
-</article>
-<hr>
-<footer class="intro-header" style="background-image: url('sarfin.jpg'); height:75%; width:75%; margin-left: auto; margin-right: auto;"></footer>
-
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script>
-$(document).ready(function(){ $('.nb').load("nav.html"); });
-</script>
-
-<!-- google analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-100071962-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
-</html>
+<p>I can be contacted by email at: will dot ernst15 at gmail dot com.</p>
