add social links

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <p>Hello World!</p>
 <p>My name is Will Ernst. I'm a software developer. I graduated from Middlebury College in 2017. In my free time I enjoy surfing, skiing, reading (generally books/blogs on tech, programming, economics), and playing the guitar. </p>
-<p>Some Work:</p>
+<p>Some (non-work)  Work:</p>
 <ul>
     <li>COMING SOON: An application for finding charities and managing recurring donations</li>
     <li>MOHO: A website for short-term and long-term rental housing listings for the Middlebury College Community. This includes student housing, faculty/staff housing, vacation rentals for parents and visitors, etc... | <a href = "http://middoffcampus.com">link</a></li>        
@@ -9,3 +9,4 @@
 </ul>
 
 <p>I can be contacted by email at: will dot ernst15 at gmail dot com.</p>
+<p><a href="https://www.linkedin.com/in/will-ernst-71557297/">Work Experience</a> | <a href="https://twitter.com/will_ernst">Random Thoughts</a> | <a href="https://github.com/wernst">Code</a></p> 
