minor wording tweak

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <p>My name is Will Ernst. I'm a software developer. I graduated from Middlebury College in 2017. In my free time I enjoy surfing, skiing, reading (generally books/blogs on tech, programming, economics), and playing the guitar. </p>
 <p>Some (non-work)  Work:</p>
 <ul>
-    <li>COMING SOON: An application for finding charities and managing recurring donations</li>
+    <li>An application for finding charities and managing recurring donations (In progress)</li>
     <li>MOHO: A website for short-term and long-term rental housing listings for the Middlebury College Community. This includes student housing, faculty/staff housing, vacation rentals for parents and visitors, etc... | <a href = "http://middoffcampus.com">link</a></li>        
     <li>TD-Othello: Temporal Difference Learning in the Game of Othello | <a href = "assets/G_Will-FinalProject.pdf" >Paper</a> | <a href = "https://github.com/wernst/td-othello">Repo</a></li>        
     </div>
