add majors to about page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <p>Hello World!</p>
-<p>My name is Will Ernst. I'm a software developer. I graduated from Middlebury College in 2017. In my free time I enjoy surfing, skiing, reading (generally books/blogs on tech, programming, economics), and playing the guitar. </p>
+<p>My name is Will Ernst. I'm a software developer. I graduated from Middlebury College in 2017, where I studied Computer Science and Economics. In my free time I enjoy surfing, skiing, reading (generally books/blogs on tech, programming, economics), and playing the guitar. </p>
 <p>Some (non-work)  Work:</p>
 <ul>
     <li>An application for finding charities and managing recurring donations (In progress)</li>
